Section added to index.html, make an appointment, become a member, our membership and suggestions. New icons added.

--- a/Week-02/index.html
+++ b/Week-02/index.html
@@ -19,20 +19,33 @@
         <aside> 
             <h3>Menu</h3>
                 <ol>
-                   <li>Home</li>
-                   <li>Sing Up</li>
-                   <li>Log In</li>
-                   <li>Info</li>
+                   <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details">Home</a></li>
+                   <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Sing Up</a></li>
+                   <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Log In</a></li>
+                   <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Info</a></li>
                    <li>Contact Us</li>
-                <ol>
-                <ul>         
-                  <li><img src="/Assets/Images/Mail.png" alt="a letter icon"> information@untitled.tld</li>
-                  <li><img src="/Assets/Images/celphone.png" alt="a celphone icon"> (000) 000-0000</li>
-                  <li><img src="/Assets/Images/address.png" alt="an address icon"> 1233 Somewhere Road #8254Nashville, TN 00000-0000</a></li>
-                <ul>    
+                     <ul>         
+                        <li><img src="/Assets/Images/Mail.png" alt="a letter icon"> information@untitled.tld</li>
+                        <li><img src="/Assets/Images/celphone.png" alt="a celphone icon"> (000) 000-0000</li>
+                        <li><img src="/Assets/Images/address.png" alt="an address icon"> 1233 Somewhere Road #8254Nashville, TN 00000-0000</a></li>
+                     <ul>
+                <ol>           
         </aside>
-
          <main>
+            <section>
+                <h3>Make an appointment</h3>
+                    <img src="/Assets/Images/appointment.png" alt="an appointment icon">
+                    <p>Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every budget and level of commitment</p>
+                <h3>Become a Member</h3>
+                    <img src="/Assets/Images/member.png" alt="a member icon">
+                    <p>Join ouw fitness community and take advantage of all the perks of being a member.We offer a range of benefits to help you reach your fitness potential.</p>
+                <h3>Our memberships</h3>
+                    <img src="/Assets/Images/membership-card.png" alt="a membership icon">
+                    <p>Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every budget and level of commitment</p>
+                <h3>Suggestions</h3>
+                    <img src="/Assets/Images/suggestion.png" alt="a suggestion icon">
+                    <p>We're always looking for ways to improve our gym experience. Have a suggestion? We want to hear from you! Share your feedback with us and help us make our gym the best it can be for our members</p>
+            </section>
         
         
         </main>
