Changes on index.html file, images problem solved. The Footer was updated, icons with links.

--- a/Week-02/index.html
+++ b/Week-02/index.html
@@ -9,13 +9,14 @@
     <body>
     
         <header> 
-            <h1>MegaR<img src="/Assets/Images/Logo-rr1.jpg" alt="o">cket</h1>
+            <h1>MegaR<img src="../Assets/Images/Logo-rr1.jpg" alt="o">cket</h1>
         </header>  
             <h2>GET STRONG, GET STRONG</h2>
              <h3>Your Ultimate Gym Experience Start Here</h3>  
              <p>We offer a wide range of fitness classes and state-of-the-art equipement to help you reach your fitness goals.</p>
              <p>Our expert trainers are here to guide and motivate you every step of the way.</p>
              <p>Join us and star your to a healthier, stronger you!</p>
+             <img src="../Assets/Images/training.png" alt="a person training image">
         <aside> 
             <h3>Menu</h3>
                 <ol>
@@ -25,25 +26,25 @@
                    <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Info</a></li>
                    <li>Contact Us</li>
                      <ul>         
-                        <li><img src="/Assets/Images/Mail.png" alt="a letter icon"> information@untitled.tld</li>
-                        <li><img src="/Assets/Images/celphone.png" alt="a celphone icon"> (000) 000-0000</li>
-                        <li><img src="/Assets/Images/address.png" alt="an address icon"> 1233 Somewhere Road #8254Nashville, TN 00000-0000</a></li>
+                        <li><img src="../Assets/Images/Mail.png" alt="a letter icon"> information@untitled.tld</li>
+                        <li><img src="../Assets/Images/celphone.png" alt="a celphone icon"> (000) 000-0000</li>
+                        <li><img src="../Assets/Images/address.png" alt="an address icon"> 1233 Somewhere Road #8254Nashville, TN 00000-0000</a></li>
                      <ul>
                 <ol>           
         </aside>
         <main>
             <section>
                 <h3>Make an appointment</h3>
-                    <img src="/Assets/Images/appointment.png" alt="an appointment icon">
+                    <img src="../Assets/Images/appointment.png" alt="an appointment icon">
                     <p>Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every budget and level of commitment</p>
                 <h3>Become a Member</h3>
-                    <img src="/Assets/Images/member.png" alt="a member icon">
+                    <img src="../Assets/Images/member.png" alt="a member icon">
                     <p>Join ouw fitness community and take advantage of all the perks of being a member.We offer a range of benefits to help you reach your fitness potential.</p>
                 <h3>Our memberships</h3>
-                    <img src="/Assets/Images/membership-card.png" alt="a membership icon">
+                    <img src="../Assets/Images/Membership.png" alt="a membership icon">
                     <p>Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every budget and level of commitment</p>
                 <h3>Suggestions</h3>
-                    <img src="/Assets/Images/suggestion.png" alt="a suggestion icon">
+                    <img src="../Assets/Images/suggestion.png" alt="a suggestion icon">
                     <p>We're always looking for ways to improve our gym experience. Have a suggestion? We want to hear from you! Share your feedback with us and help us make our gym the best it can be for our members</p>
             
                 <nav>  
@@ -68,10 +69,9 @@
                         <div>
                             <textarea name="Description" placeholder="Your massage ..."></textarea> </textarea>
                         </div>
-                        <input type="submit" value="Clear">
-                            <img src="/Assets/Images/cross.png" alt="a cross icon">
+                        <input type="submit" value="Clear"><img src="../Assets/Images/cross.png" alt="a cross icon">
                         <input type="submit" value="Send">
-                            <img src="/Assets/Images/send-mail.png" alt="a send icon">
+                            <img src="../Assets/Images/send-mail.png" alt="a send icon">
                 </nav>  
             </section>
             <section> 
@@ -108,8 +108,10 @@
             </section>
         </main>
             <Footer>
-                <h5>Copyright <img src="/Assets/Images/copyright.png" alt="a copyright icon"> 2023 MegaRocket SA. All rights reserved.</h5>
-                <img src="/Assets/Images/facebook.png" alt="Faceook Icon"><img src="/Assets/Images/instagram.png" alt="Instagram Icon"><img src="/Assets/Images/linkedin.png" alt="LinkedIn Icon">
+                <h5>Copyright © 2023 MegaRocket SA. All rights reserved.</h5> 
+                <a href="https://www.facebook.com/"><img src="../Assets/Images/facebook.png" alt="Facebooc icon"></a>
+                <a href="https://www.instagram.com/"><img src="../Assets/Images/instagram.png" alt="Instagram icon"></a>
+                <a href="https://www.linkedin.com/"><img src="../Assets/Images/linkedin.png" alt="LinkedIn icon"></a>
             </Footer>
     </body>
 </html>
