--- a/Week-02/index.html
+++ b/Week-02/index.html
@@ -6,18 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>MegaRocket-Eliezer Alberto</title>
     <head>
-    <body>
-    
+    <body>    
         <header> 
-            <h1>MegaR<img src="../Assets/Images/Logo-rr1.jpg" alt="o">cket</h1>
-        </header>  
-            <h2>GET STRONG, GET STRONG</h2>
-             <h3>Your Ultimate Gym Experience Start Here</h3>  
-             <p>We offer a wide range of fitness classes and state-of-the-art equipement to help you reach your fitness goals.</p>
-             <p>Our expert trainers are here to guide and motivate you every step of the way.</p>
-             <p>Join us and star your to a healthier, stronger you!</p>
-             <img src="../Assets/Images/training.png" alt="a person training image">
-        <aside> 
+            <h1>MegaR<img src="../Assets/Images/Logo-rr1.jpg" alt="MegaRocket">cket</h1>
+        </header>
+        <aside>
+            <img src="../Assets/Images/Menu.png" alt="a menu icon">
             <h3>Menu</h3>
                 <ol>
                    <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details">Home</a></li>
@@ -25,13 +19,21 @@
                    <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Log In</a></li>
                    <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Info</a></li>
                    <li>Contact Us</li>
-                     <ul>         
-                        <li><img src="../Assets/Images/Mail.png" alt="a letter icon"> information@untitled.tld</li>
-                        <li><img src="../Assets/Images/celphone.png" alt="a celphone icon"> (000) 000-0000</li>
-                        <li><img src="../Assets/Images/address.png" alt="an address icon"> 1233 Somewhere Road #8254Nashville, TN 00000-0000</a></li>
-                     <ul>
+                        <ul>         
+                            <li><img src="../Assets/Images/Mail.png" alt="a letter icon"> information@untitled.tld</li>
+                            <li><img src="../Assets/Images/celphone.png" alt="a celphone icon"> (000) 000-0000</li>
+                            <li><img src="../Assets/Images/address.png" alt="an address icon"> 1233 Somewhere Road #8254Nashville, TN 00000-0000</a></li>
+                        <ul>
                 <ol>           
-        </aside>
+        </aside>  
+            <section>
+                <h2>GET FIT, GET STRONG</h2>
+                <h3>Your Ultimate Gym Experience Starts Here</h3>  
+                <p>We offer a wide range of fitness classes and state-of-the-art equipement to help you reach your fitness goals.</p>
+                <p>Our expert trainers are here to guide and motivate you every step of the way.</p>
+                <p>Join us and star your to a healthier, stronger you!</p>
+                <img src="../Assets/Images/training.png" alt="a person training image">
+            </section>    
         <main>
             <section>
                 <h3>Make an appointment</h3>
@@ -46,7 +48,6 @@
                 <h3>Suggestions</h3>
                     <img src="../Assets/Images/suggestion.png" alt="a suggestion icon">
                     <p>We're always looking for ways to improve our gym experience. Have a suggestion? We want to hear from you! Share your feedback with us and help us make our gym the best it can be for our members</p>
-            
                 <nav>  
                     <h3>You have questions, ask away and get your answers</h3>
                          <div>
@@ -61,6 +62,7 @@
                         <div>
                             <input type="text" placeholder="Select a motive">
                                 <select>
+                                    <option></option>
                                     <option>I want to know about a membership and costs.</option>
                                     <option>I want to submit a sugestion/enquiry.</option>
                                     <option>I want to submit a complain.</option>
@@ -69,7 +71,8 @@
                         <div>
                             <textarea name="Description" placeholder="Your massage ..."></textarea> </textarea>
                         </div>
-                        <input type="submit" value="Clear"><img src="../Assets/Images/cross.png" alt="a cross icon">
+                        <input type="submit" value="Clear">
+                            <img src="../Assets/Images/cross.png" alt="a cross icon">
                         <input type="submit" value="Send">
                             <img src="../Assets/Images/send-mail.png" alt="a send icon">
                 </nav>  
