Changes added to index.html wit some elements and README updated

--- a/Week-02/index.html
+++ b/Week-02/index.html
@@ -10,22 +10,23 @@
         <header> 
             <h1>MegaR<img src="../Assets/Images/Logo-rr1.jpg" alt="MegaRocket">cket</h1>
         </header>
-        <aside>
-            <img src="../Assets/Images/Menu.png" alt="a menu icon">
-            <h3>Menu</h3>
-                <ol>
-                   <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details">Home</a></li>
-                   <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Sing Up</a></li>
-                   <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Log In</a></li>
-                   <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Info</a></li>
-                   <li>Contact Us</li>
-                        <ul>         
-                            <li><img src="../Assets/Images/Mail.png" alt="a letter icon"> information@untitled.tld</li>
-                            <li><img src="../Assets/Images/celphone.png" alt="a celphone icon"> (000) 000-0000</li>
-                            <li><img src="../Assets/Images/address.png" alt="an address icon"> 1233 Somewhere Road #8254Nashville, TN 00000-0000</a></li>
-                        <ul>
-                <ol>           
-        </aside>  
+            <aside>
+                <img src="../Assets/Images/Menu.png" alt="a menu icon">
+                <h3>Menu</h3>
+                    <ol>
+                    <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details">Home</a></li>
+                    <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Sing Up</a></li>
+                    <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Log In</a></li>
+                    <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Info</a></li>
+                    <li>Contact Us</li>
+                            <ul>         
+                                <li><img src="../Assets/Images/Mail.png" alt="a letter icon"> information@untitled.tld</li>
+                                <li><img src="../Assets/Images/celphone.png" alt="a celphone icon"> (000) 000-0000</li>
+                                <li><img src="../Assets/Images/address.png" alt="an address icon"> 1233 Somewhere Road #8254Nashville, TN 00000-0000</a></li>
+                            <ul>
+                    <ol>           
+            </aside>    
+        <main>
             <section>
                 <h2>GET FIT, GET STRONG</h2>
                 <h3>Your Ultimate Gym Experience Starts Here</h3>  
@@ -33,88 +34,102 @@
                 <p>Our expert trainers are here to guide and motivate you every step of the way.</p>
                 <p>Join us and star your to a healthier, stronger you!</p>
                 <img src="../Assets/Images/training.png" alt="a person training image">
-            </section>    
-        <main>
+            </section>  
             <section>
-                <h3>Make an appointment</h3>
-                    <img src="../Assets/Images/appointment.png" alt="an appointment icon">
-                    <p>Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every budget and level of commitment</p>
-                <h3>Become a Member</h3>
-                    <img src="../Assets/Images/member.png" alt="a member icon">
-                    <p>Join ouw fitness community and take advantage of all the perks of being a member.We offer a range of benefits to help you reach your fitness potential.</p>
-                <h3>Our memberships</h3>
-                    <img src="../Assets/Images/Membership.png" alt="a membership icon">
-                    <p>Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every budget and level of commitment</p>
-                <h3>Suggestions</h3>
-                    <img src="../Assets/Images/suggestion.png" alt="a suggestion icon">
-                    <p>We're always looking for ways to improve our gym experience. Have a suggestion? We want to hear from you! Share your feedback with us and help us make our gym the best it can be for our members</p>
-                <nav>  
-                    <h3>You have questions, ask away and get your answers</h3>
-                         <div>
-                            <input type="text" placeholder="Name"> 
-                        </div>
-                        <div>
-                            <input type="text" placeholder="Surname">
-                        </div>
-                        <div>
-                            <input type="text" placeholder="E-mail adress"> 
-                        </div>
-                        <div>
-                            <input type="text" placeholder="Select a motive">
-                                <select>
-                                    <option></option>
-                                    <option>I want to know about a membership and costs.</option>
-                                    <option>I want to submit a sugestion/enquiry.</option>
-                                    <option>I want to submit a complain.</option>
-                                </select>
-                        </div>
-                        <div>
-                            <textarea name="Description" placeholder="Your massage ..."></textarea> </textarea>
-                        </div>
-                        <input type="submit" value="Clear">
-                            <img src="../Assets/Images/cross.png" alt="a cross icon">
-                        <input type="submit" value="Send">
-                            <img src="../Assets/Images/send-mail.png" alt="a send icon">
-                </nav>  
+                <div>
+                    <h3>Make an appointment</h3>
+                        <img src="../Assets/Images/appointment.png" alt="an appointment icon">
+                        <p>Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every budget and level of commitment</p>
+                    <h3>Become a Member</h3>
+                        <img src="../Assets/Images/member.png" alt="a member icon">
+                        <p>Join ouw fitness community and take advantage of all the perks of being a member.We offer a range of benefits to help you reach your fitness potential.</p>
+                    <h3>Our memberships</h3>
+                        <img src="../Assets/Images/Membership.png" alt="a membership icon">
+                        <p>Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every budget and level of commitment</p>
+                    <h3>Suggestions</h3>
+                        <img src="../Assets/Images/suggestion.png" alt="a suggestion icon">
+                        <p>We're always looking for ways to improve our gym experience. Have a suggestion? We want to hear from you! Share your feedback with us and help us make our gym the best it can be for our members</p>
+                </div>
             </section>
-            <section> 
-                <h3>OUR HISTORY</h3>
-                <P>Our journey began with a passion for fitness and a desire to create a community where individuals could come together to achieve their health and wellness goals. We wanted to bild a gym that was more t....</P>
+            <section>  
+                <h3>
+                    You have questions, ask away and get your answers
+                </h3>
+                    <div>
+                        <input type="text" placeholder="Name"> 
+                    </div>
+                    <div>
+                        <input type="text" placeholder="Surname">
+                    </div>
+                    <div>
+                        <input type="text" placeholder="E-mail adress"> 
+                    </div>
+                    <div>
+                        <input type="text" placeholder="Select a motive">
+                            <select>
+                                <option></option>
+                                <option>I want to know about a membership and costs.</option>
+                                <option>I want to submit a sugestion/enquiry.</option>
+                                <option>I want to submit a complain.</option>
+                            </select>
+                    </div>
+                    <div>
+                        <textarea name="Description" placeholder="Your massage ..."></textarea> </textarea>
+                    </div>
+                        <button>                            
+                                <input type="submit" value="Clear">
+                                <img src="../Assets/Images/cross.png" alt="a cross icon">
+                        </button>
+                        <button>
+                            <input type="submit" value="Send">
+                                <img src="../Assets/Images/send-mail.png" alt="a send icon">
+                        </button>
+                    </div>
+            </section> 
+            <section>
+                <div>
+                    <h3>OUR HISTORY</h3>
+                    <P>Our journey began with a passion for fitness and a desire to create a community where individuals could come together to achieve their health and wellness goals. We wanted to bild a gym that was more t....</P>
+                </div>
             </section>
             <section>
-                <h4>Our activities</h4>
-                    <ol>
-                        <li>Crossfit</li>
-                        <li>Spinning</li>
-                        <li>Functional</li>
-                        <li>Boxing</li>
-                        <li>Weightlifting</li>
-                    </ol>
-                <input type="submit" value="Black Membership">
-                    <ul>
-                        <li>Free access to BB class</li>
-                        <li>Free access to classes without making appointment</li>
-                        <li>Personalized follow up with personal trainer</li>
-                        <li>Grid display</li>
-                    </ul>
-                <input type="submit" value="Classic Membership">
-                    <ul>
-                        <li>Free pass to weight room</li>
-                        <li>Monitored by a personal coach</li>
-                        <li>Displayed schedule</li>
-                    </ul>
-                <input type="submit" value="Only Classes Membership">
-                    <ul>
-                        <li>Free pass to classes with prior appointment</li>
-                        <li>Displayed schedule</li>
-                    </ul>    
+                <div>
+                    <h4>Our activities</h4>
+                        <ol>
+                            <li>Crossfit</li>
+                            <li>Spinning</li>
+                            <li>Functional</li>
+                            <li>Boxing</li>
+                            <li>Weightlifting</li>
+                        </ol>
+                    <input type="submit" value="Black Membership">
+                        <ul>
+                            <li>Free access to BB class</li>
+                            <li>Free access to classes without making appointment</li>
+                            <li>Personalized follow up with personal trainer</li>
+                            <li>Grid display</li>
+                        </ul>
+                    <input type="submit" value="Classic Membership">
+                        <ul>
+                            <li>Free pass to weight room</li>
+                            <li>Monitored by a personal coach</li>
+                            <li>Displayed schedule</li>
+                        </ul>
+                    <input type="submit" value="Only Classes Membership">
+                        <ul>
+                            <li>Free pass to classes with prior appointment</li>
+                            <li>Displayed schedule</li>
+                        </ul>
+                </div>   
             </section>
         </main>
             <Footer>
-                <h5>Copyright © 2023 MegaRocket SA. All rights reserved.</h5> 
-                <a href="https://www.facebook.com/"><img src="../Assets/Images/facebook.png" alt="Facebooc icon"></a>
-                <a href="https://www.instagram.com/"><img src="../Assets/Images/instagram.png" alt="Instagram icon"></a>
-                <a href="https://www.linkedin.com/"><img src="../Assets/Images/linkedin.png" alt="LinkedIn icon"></a>
+                <span>
+                    <h5>Copyright © 2023 MegaRocket SA. All rights reserved.</h5> 
+                    <a href="https://www.facebook.com/"><img src="../Assets/Images/facebook.png" alt="Facebooc icon"></a>
+                    <a href="https://www.instagram.com/"><img src="../Assets/Images/instagram.png" alt="Instagram icon"></a>
+                    <a href="https://www.linkedin.com/"><img src="../Assets/Images/linkedin.png" alt="LinkedIn icon"></a>
+                </span>
             </Footer>
     </body>
 </html>
