BaSP-W03-2023: Changes on index.html and styles.css

--- a/Week-03/index.html
+++ b/Week-03/index.html
@@ -88,36 +88,27 @@
                     </h3>
                 </div>    
             </section>
-            <section>
-                <div class="form-group"></div>
-                    <form class="my-form">
-                        <h3>
-                            You have questions, ask away and get your answers
-                        </h3>
-                            <input type="text" placeholder="Name"> 
-                            <input type="text" placeholder="Surname">
-                            <input type="text" placeholder="E-mail adress"> 
-                            <input type="text" placeholder="Select a motive">
-                            <select>
-                                <option></option>
-                                <option>I want to know about a membership and costs.</option>
-                                <option>I want to submit a sugestion/enquiry.</option>
-                                <option>I want to submit a complain.</option>
-                            </select>
-                        </section>
-                    </form>
-                </div> 
-            </section>
-                <section>
-                    <textarea name="Description" placeholder="Your massage ..."></textarea> </textarea>
-                </section>
-                    <button>                            
+            <section class="form-group">
+                <form>
+                    <h3>
+                        You have questions, ask away and get your answers
+                    </h3>
+                        <input type="text" placeholder="Name"> 
+                        <input type="text" placeholder="Surname">
+                        <input type="text" placeholder="E-mail adress"> 
+                        <input type="text" placeholder="Select a motive">
+                        <select>
+                            <option></option>
+                            <option>I want to know about a membership and costs.</option>
+                            <option>I want to submit a sugestion/enquiry.</option>
+                            <option>I want to submit a complain.</option>
+                        </select>
+                    <textarea name="Description" placeholder="Your massage ..."></textarea>
+                    <div class="form-group">                       
                         <img src="../Assets/Images/Clear.png" alt="a cross icon">
-                    </button>
-                    <button>
                         <img src="../Assets/Images/Send.png" alt="a send icon">
-                    </button>
-                </section>
+                    </div>
+                </form>
             </section> 
             <section>
                 <div class="history">
