BaSP-W03-2023: the index.html was changed and the style.css was updated.

--- a/Week-03/index.html
+++ b/Week-03/index.html
@@ -17,29 +17,51 @@
                 <img src="../Assets/Images/Icon.png" alt="a menu icon">
             </h1>
         </header>
-            <aside>
+            <aside class="side-bar">
                 <h3>
                     Menu
-                    <ol>
-                        <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details">Home</a></li>
-                        <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Sing Up</a></li>
-                        <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Log In</a></li>
-                        <li><a href="https://classroom.google.com/c/NDkwOTEyNjE5Mjcz/m/NTQzMjU2Njg0NTYy/details ">Info</a></li>
-                        <li>Contact Us
-                            <ul>         
-                                <li><img src="../Assets/Images/Mail.png" alt="a letter icon"> information@untitled.tld</li>
-                                <li><img src="../Assets/Images/celphone.png" alt="a celphone icon"> (000) 000-0000</li>
-                                <li><img src="../Assets/Images/address.png" alt="an address icon"> 1233 Somewhere Road #8254Nashville, TN 00000-0000</a></li>
-                            <ul>
-                        </li>
-                    <ol>
                 </h3>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Sing Up</a>
+                        </li>   
+                        <li>
+                            <a href="#">Log In</a>
+                        </li>   
+                        <li>
+                            <a href="#">Info</a>
+                        </li>
+                    </ul>
+                </nav>
+                <nav class="sidebar-contact">
+                    <h4>    
+                        Contact Us
+                    </h4> 
+                    <ul>         
+                        <li>
+                            information@untitled.tld
+                        <img src="../Assets/Images/mail.png" alt="a letter icon">      
+                        </li>
+                        <li>
+                            (000) 00000-0000
+                        <img src="../Assets/Images/Cellphone.png" alt="a celphone icon">
+                        </li>
+                        <li>
+                            1233 Somewhere Road #8254Nashville, TN 00000-0000
+                        <img src="../Assets/Images/Address.png" alt="an address icon">    
+                        </li>    
+                    <ul>    
+                </nav> 
             </aside>    
         <main>
-            <section>
-                <div class="box-1">
+            <section class="strong">
+                <div class="getfit">
                     <h2>
-                        GET FIT, GET STRONG
+                        get fit, get strong
                     </h2>    
                     <h3>
                         Your Ultimate Gym Experience Starts Here  
@@ -49,64 +71,81 @@
                         Our expert trainers are here to guide and motivate you every step of the way.
                         Join us and star your to a healthier, stronger you!
                     </p>
-                    <img src="../Assets/Images/training.png" alt="a person training image" class="training">
                 </div>
+                <img src="../Assets/Images/training.png" alt="a person training image">
             </section>  
-            <section>
+            <section class="option-containers">
                 <div class="options">
+                    <img src="../Assets/Images/Appointment.png" alt="an appointment icon">
                     <h3>
                         Make an appointment
-                        <img src="../Assets/Images/Appointment.png" alt="an appointment icon">
-                        <p>
-                            Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every
-                            budget and level of commitment
-                        </p>
                     </h3>
-                    <h3>
-                        Become a Member
-                        <img src="../Assets/Images/Member.png" alt="a member icon">
-                        <p>
-                            Join ouw fitness community and take advantage of all the perks of being a member.
-                            We offer a range of benefits to help you reach your fitness potential.
-                        </p>    
-                    </h3>
+                    <p>
+                        Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every
+                        budget and level of commitment
+                    </p>
+                </div>
+                <div class="options">
+                    <img src="../Assets/Images/Membership.png" alt="a membership icon">
                     <h3>
                         Our memberships
-                        <img src="../Assets/Images/Membership.png" alt="a membership icon">
-                        <p>
-                            Choose the membership plan that fits your lifestyle and fitness goals.
-                            From basic to premium, we have options to every budget and level of commitment
-                        </p>
-                    </h3>   
+                    </h3>
+                    <p>
+                        Choose the membership plan that fits your lifestyle and fitness goals.
+                        From basic to premium, we have options to every budget and level of commitment
+                    </p>
+                </div>
+                <div class="options">   
+                    <img src="../Assets/Images/Member.png" alt="a member icon">
+                    <h3>
+                        Become a Member
+                    </h3> 
+                    <p>
+                        Join ouw fitness community and take advantage of all the perks of being a member.
+                        We offer a range of benefits to help you reach your fitness potential.
+                    </p>
+                </div>
+                <div class="options">
+                    <img src="../Assets/Images/Suggestion.png" alt="a suggestion icon">
                     <h3>
                         Suggestions
-                        <img src="../Assets/Images/Suggestion.png" alt="a suggestion icon">
-                        <p>
-                            We're always looking for ways to improve our gym experience. Have a suggestion?
-                            We want to hear from you! Share your feedback with us and help us make our gym the best it can be for our members            
-                        </p>
                     </h3>
+                    <p>
+                        We're always looking for ways to improve our gym experience. Have a suggestion?
+                        We want to hear from you! Share your feedback with us and help us make our gym the best it can be for our members            
+                    </p>
                 </div>    
             </section>
-            <section class="form-group">
-                <form>
+            <section>
+                <form class="form-group">
                     <h3>
                         You have questions, ask away and get your answers
                     </h3>
+                    <div>
                         <input type="text" placeholder="Name"> 
                         <input type="text" placeholder="Surname">
-                        <input type="text" placeholder="E-mail adress"> 
-                        <input type="text" placeholder="Select a motive">
+                        <input type="text" placeholder="E-mail adress">     
                         <select>
-                            <option></option>
-                            <option>I want to know about a membership and costs.</option>
-                            <option>I want to submit a sugestion/enquiry.</option>
-                            <option>I want to submit a complain.</option>
+                            <option>
+                                Select a motive
+                            </option>
+                            <option>
+                                I want to know about a membership and costs.
+                            </option>
+                            <option>
+                                I want to submit a sugestion/enquiry.
+                            </option>
+                            <option>
+                                I want to submit a complain.
+                            </option>
                         </select>
-                    <textarea name="Description" placeholder="Your massage ..."></textarea>
-                    <div class="form-group">                       
+                    </div>   
+                    <div class="form-group"> 
+                        <textarea 
+                            name="Description" placeholder="Your massage ...">
+                        </textarea> 
                         <img src="../Assets/Images/Clear.png" alt="a cross icon">
-                        <img src="../Assets/Images/Send.png" alt="a send icon">
+                        <img src="../Assets/Images/Send.png" alt="a send icon">                           
                     </div>
                 </form>
             </section> 
@@ -121,8 +160,8 @@
                     </p>
                  </div>
             </section>
-            <section>
-                <div class="activities">
+            <section class="activities">
+                <div>
                     <input type="submit" value="Our activities">
                     <ol>
                         <li>Crossfit</li>
@@ -131,6 +170,8 @@
                         <li>Boxing</li>
                         <li>Weightlifting</li>
                     </ol>
+                </div>
+                <div>
                     <input type="submit" value="Black Membership">
                     <ul>
                         <li>Free access to BB class</li>
@@ -138,12 +179,16 @@
                         <li>Personalized follow up with personal trainer</li>
                         <li>Grid display</li>
                     </ul>
+                </div>
+                <div>
                     <input type="submit" value="Classic Membership">
                     <ul>
                         <li>Free pass to weight room</li>
                         <li>Monitored by a personal coach</li>
                         <li>Displayed schedule</li>
                     </ul>
+                </div>
+                <div>
                     <input type="submit" value="Only Classes Membership">
                     <ul>
                         <li>Free pass to classes with prior appointment</li>
