--- a/Week-03/index.html
+++ b/Week-03/index.html
@@ -7,6 +7,9 @@
         <title>MegaRocket-Eliezer Alberto</title>
         <link rel="stylesheet" href="../Week-03/css/reset.css">
         <link rel="stylesheet" href="../Week-03/css/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <head>
     <body class="body">    
         <header>
@@ -21,64 +24,63 @@
                 <h3>
                     Menu
                 </h3>
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li>
-                            <a href="#">Sing Up</a>
-                        </li>   
-                        <li>
-                            <a href="#">Log In</a>
-                        </li>   
-                        <li>
-                            <a href="#">Info</a>
-                        </li>
-                    </ul>
-                </nav>
-                <nav class="sidebar-contact">
+                <div>
+                    <input type="text" placeholder="Home">
+                        <a href="#"></a>
+                    <input type="text" placeholder="Sing Up">
+                        <a href="#"></a>
+                    <input type="text" placeholder="Log In">
+                        <a href="#"></a>
+                    <input type="text" placeholder="Info">
+                        <a href="#"></a>
+                    </li>
+                </div>
+                <div class="sidebar-contact">
                     <h4>    
                         Contact Us
-                    </h4> 
-                    <ul>         
-                        <li>
-                            information@untitled.tld
-                        <img src="../Assets/Images/mail.png" alt="a letter icon">      
-                        </li>
-                        <li>
-                            (000) 00000-0000
-                        <img src="../Assets/Images/Cellphone.png" alt="a celphone icon">
-                        </li>
-                        <li>
-                            1233 Somewhere Road #8254Nashville, TN 00000-0000
-                        <img src="../Assets/Images/Address.png" alt="an address icon">    
-                        </li>    
-                    <ul>    
-                </nav> 
+                    </h4>          
+                    <img src="../Assets/Images/mail.png" alt="a letter icon">
+                    <li>
+                        information@untitled.tld
+                    </li>
+                    <img src="../Assets/Images/Cellphone.png" alt="a celphone icon">
+                    <li>        
+                        (000) 00000-0000
+                    </li>
+                    <img src="../Assets/Images/Address.png" alt="an address icon">    
+                    <li>     
+                        1233 Somewhere Road #8254Nashville, TN 00000-0000
+                    </li>  
+                </div>
             </aside>    
         <main>
             <section class="strong">
                 <div class="getfit">
                     <h2>
                         get fit, get strong
-                    </h2>    
+                    </h2>
                     <h3>
-                        Your Ultimate Gym Experience Starts Here  
+                        Your Ultimate Gym Experience Starts Here
                     </h3>
                     <p>
                         We offer a wide range of fitness classes and state-of-the-art equipement to help you reach your fitness goals.
+                    </P>
+                    <P>
                         Our expert trainers are here to guide and motivate you every step of the way.
+                    </P>
+                    <P>
                         Join us and star your to a healthier, stronger you!
                     </p>
                 </div>
-                <img src="../Assets/Images/training.png" alt="a person training image">
+                <div class="training">
+                    <img src="../Assets/Images/training.png" alt="a person training image">                  
+                </div>
             </section>  
             <section class="option-containers">
                 <div class="options">
                     <img src="../Assets/Images/Appointment.png" alt="an appointment icon">
                     <h3>
-                        Make an appointment
+                        <input type="text" placeholder="Make an appointment"> 
                     </h3>
                     <p>
                         Choose the membership plan that fits your lifestyle and fitness goals. From basic to premium, we have options to every
